force-app/main/default/objects/NRR__c/NRR__c.object-meta.xml
<CustomObject>
    <label>NRR</label>
    <nameField>
        <displayFormat>NRR-{00000}</displayFormat>
        <label>NRR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NRR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>