force-app/main/default/objects/NRR__c/fields/Approved_NRR__c.field-meta.xml
<CustomField>
    <fullName>Approved_NRR__c</fullName>
    <label>Approved NRR</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>