force-app/main/default/objects/NRR__c/fields/AV_After_2_GST_discount__c.field-meta.xml
<CustomField>
    <fullName>AV_After_2_GST_discount__c</fullName>
    <label>AV After 2% GST discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>