force-app/main/default/objects/NRR__c/fields/AV_as_per_cost_sheet__c.field-meta.xml
<CustomField>
    <fullName>AV_as_per_cost_sheet__c</fullName>
    <label>AV as per cost sheet</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>