force-app/main/default/objects/NRR__c/fields/AV_for_Brokerage_after_deduction__c.field-meta.xml
<CustomField>
    <fullName>AV_for_Brokerage_after_deduction__c</fullName>
    <label>AV for Brokerage (after deduction)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>