force-app/main/default/objects/NRR__c/fields/Base_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Base_Brokerage__c</fullName>
    <label>Base Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>