force-app/main/default/objects/NRR__c/fields/Base_Price_with_Car_Parks__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_with_Car_Parks__c</fullName>
    <label>Base Price with Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>