force-app/main/default/objects/NRR__c/fields/Brokerage_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_to_be_paid__c</fullName>
    <label>Brokerage to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>