force-app/main/default/objects/NRR__c/fields/CP_passback_if_Applicable__c.field-meta.xml
<CustomField>
    <fullName>CP_passback_if_Applicable__c</fullName>
    <label>CP passback if Applicable</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>