force-app/main/default/objects/NRR__c/fields/CP_Pay_out_Referral_payout__c.field-meta.xml
<CustomField>
    <fullName>CP_Pay_out_Referral_payout__c</fullName>
    <label>CP Pay-out/ Referral payout</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>