force-app/main/default/objects/NRR__c/fields/Discount_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_1__c</fullName>
    <label>Discount 1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>