force-app/main/default/objects/NRR__c/fields/Discount_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_2__c</fullName>
    <label>Discount 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>