force-app/main/default/objects/NRR__c/fields/Discount_3_CP_Pass_back__c.field-meta.xml
<CustomField>
    <fullName>Discount_3_CP_Pass_back__c</fullName>
    <label>Discount 3 (CP Pass back)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>