force-app/main/default/objects/NRR__c/fields/Flat_No__c.field-meta.xml
<CustomField>
    <fullName>Flat_No__c</fullName>
    <label>Flat No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>