force-app/main/default/objects/NRR__c/fields/Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Floor Rise</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>