force-app/main/default/objects/NRR__c/fields/Garden_Premium_NPV_any_other_premium__c.field-meta.xml
<CustomField>
    <fullName>Garden_Premium_NPV_any_other_premium__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Garden Premium/ NPV/ any other premium</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>