force-app/main/default/objects/NRR__c/fields/Interest_Cost_NPV_Subvention_Deffered__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cost_NPV_Subvention_Deffered__c</fullName>
    <label>Interest Cost - NPV/Subvention/Deffered/</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>