force-app/main/default/objects/NRR__c/fields/Net_Realisation__c.field-meta.xml
<CustomField>
    <fullName>Net_Realisation__c</fullName>
    <label>Net Realisation</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>