force-app/main/default/objects/NRR__c/fields/Net_value__c.field-meta.xml
<CustomField>
    <fullName>Net_value__c</fullName>
    <label>Net value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>