force-app/main/default/objects/NRR__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NRR</relationshipLabel>
    <relationshipName>NRR</relationshipName>
    <type>Lookup</type>
</CustomField>