force-app/main/default/objects/NRR__c/fields/Other_Cost_if_any_Eg_SD_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_if_any_Eg_SD_Waiver__c</fullName>
    <label>Other Cost if any (Eg. SD Waiver)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>