force-app/main/default/objects/NRR__c/fields/PAGE_premium__c.field-meta.xml
<CustomField>
    <fullName>PAGE_premium__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PAGE premium</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>