force-app/main/default/objects/NRR__c/fields/Passback__c.field-meta.xml
<CustomField>
    <fullName>Passback__c</fullName>
    <label>Passback%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>