force-app/main/default/objects/NRR__c/fields/Premium_1__c.field-meta.xml
<CustomField>
    <fullName>Premium_1__c</fullName>
    <label>Premium 1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>