force-app/main/default/objects/NRR__c/fields/Premium_2__c.field-meta.xml
<CustomField>
    <fullName>Premium_2__c</fullName>
    <label>Premium 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>