force-app/main/default/objects/NRR__c/fields/SD_Impact_Applicable__c.field-meta.xml
<CustomField>
    <fullName>SD_Impact_Applicable__c</fullName>
    <label>SD Impact Applicable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>