force-app/main/default/objects/NRR__c/fields/SD_impact_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>SD_impact_if_applicable__c</fullName>
    <label>SD impact if applicable</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>