force-app/main/default/objects/NRR__c/fields/SD_in_AV__c.field-meta.xml
<CustomField>
    <fullName>SD_in_AV__c</fullName>
    <label>SD in AV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>