force-app/main/default/objects/NRR__c/fields/Total_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Agreement_Value__c</fullName>
    <label>Total Agreement Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>